# diabetes_risk_prediction

./: main.py  pyproject.toml
src/: config.py
src/data/: error_messages.py  exceptions.py
src/data_loader/: __init__.py  data_loader.py  error_messages.py
