[project]
name = "diabetes-risk"
version = "0.1.0"
description = "Diabetes risk prediction ML project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
test-dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
